--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
                     <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
             </intent-filter>
         </receiver>
+        <provider
+            android:authorities="me.adegokeobasa.sunshine.app"
+            android:name=".data.WeatherProvider"/>
     </application>
 
 </manifest>
